[package]
name = "tinymd"
version = "0.1.0"
authors = ["Alexander Wu <alexanderwu68@yahoo.com>"]
edition = "2018"
description = "A tiny markdown compiler based on Jesse's tutorials."
homepage = "https://alexander-zw.github.io"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
termion = "*"
